--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 } */
+
+.project-item {
+  width: 100%;
+  height: 250px; /* adjust the height as needed */
+}
+
+.project-image {
+  width: 100%;
+  height: 100%;
+}
+
+.project-info {
+  width: 100%;
+  height: 100%;
+}
